; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo.c_run_control.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo.c_run_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.vo*, i32, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @run_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_control(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8**, align 8
  %4 = alloca %struct.vo*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = bitcast i8* %8 to i8**
  store i8** %9, i8*** %3, align 8
  %10 = load i8**, i8*** %3, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  %12 = load i8*, i8** %11, align 8
  %13 = bitcast i8* %12 to %struct.vo*
  store %struct.vo* %13, %struct.vo** %4, align 8
  %14 = load i8**, i8*** %3, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 1
  %16 = load i8*, i8** %15, align 8
  %17 = ptrtoint i8* %16 to i64
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %5, align 4
  %19 = load i8**, i8*** %3, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 2
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %6, align 8
  %22 = load %struct.vo*, %struct.vo** %4, align 8
  %23 = call i32 @update_opts(%struct.vo* %22)
  %24 = load %struct.vo*, %struct.vo** %4, align 8
  %25 = getelementptr inbounds %struct.vo, %struct.vo* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32 (%struct.vo*, i32, i8*)*, i32 (%struct.vo*, i32, i8*)** %27, align 8
  %29 = load %struct.vo*, %struct.vo** %4, align 8
  %30 = load i32, i32* %5, align 4
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 %28(%struct.vo* %29, i32 %30, i8* %31)
  store i32 %32, i32* %7, align 4
  %33 = load i8**, i8*** %3, align 8
  %34 = getelementptr inbounds i8*, i8** %33, i64 3
  %35 = load i8*, i8** %34, align 8
  %36 = icmp ne i8* %35, null
  br i1 %36, label %37, label %43

37:                                               ; preds = %1
  %38 = load i32, i32* %7, align 4
  %39 = load i8**, i8*** %3, align 8
  %40 = getelementptr inbounds i8*, i8** %39, i64 3
  %41 = load i8*, i8** %40, align 8
  %42 = bitcast i8* %41 to i32*
  store i32 %38, i32* %42, align 4
  br label %43

43:                                               ; preds = %37, %1
  ret void
}

declare dso_local i32 @update_opts(%struct.vo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
